--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" />
+  <title>Document</title>
 
-  <body>
-    <h1>Rens todos app</h1>
+</head>
 
-    <ul id="todos">
+<body>
+  <h1>Rens todos app</h1>
+
+  <ul id="todos">
 
 
-    </ul>
+  </ul>
 
-    <form>
-      <input type="text" name="todo">
-      <button>Maak todo!</button>
-    </form>
+  <form id="addForm">
+    <input type="text" name="todo">
+    <button type="submit">Maak todo!</button>
+  </form>
 
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 
 </html>
