Fixed adding Todo's
The function to add todo's works, It starts by adding an object to the array, using the input from the form. After that it then resets the form input field, clears the current list, and recreates the list using all the objects in the array.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </ul>
 
   <form id="addForm">
-    <input type="text" name="todo">
+    <label for="todo">Typ hier je todo</label>
+    <input type="text" name="todo" id="todo" id="todo">
     <button type="submit">Maak todo!</button>
   </form>
 
